@@ -258,6 +258,11 @@ Texas Instruments TMS320C6x		tic6x-*-*
 
 Renesas RL78				rl78-*-elf
 
+* The binary "gdbtui" is deprecated.
+
+  The binary will be no longer built or installed in GDB 7.5.
+  Use "gdb -tui" instead.
+
 *** Changes in GDB 7.3.1
 
 * The build failure for NetBSD and OpenBSD targets have now been fixed.
